# ChangeLog for media-sound/audacious
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/audacious/ChangeLog,v 1.198 2010/03/01 19:57:36 chainsaw Exp $

  01 Mar 2010; <chainsaw@gentoo.org> -audacious-2.1.ebuild,
  -audacious-2.3_alpha1.ebuild, -audacious-2.3_alpha2.ebuild:
  Deleting old ebuild and 2.3 alpha releases.

  01 Mar 2010; Jeroen Roovers <jer@gentoo.org> audacious-2.2.ebuild:
  Stable for HPPA (bug #295051).

*audacious-2.3_beta1 (28 Feb 2010)

  28 Feb 2010; <chainsaw@gentoo.org> +audacious-2.3_beta1.ebuild:
  First 2.3 beta; now unmasked so ~arch users can join in on the fun. Bug
  reports upstream please.

*audacious-2.3_alpha2 (09 Feb 2010)

  09 Feb 2010; <chainsaw@gentoo.org> +audacious-2.3_alpha2.ebuild:
  New and improved alpha build with debug functionality. Bugs still
  upstream, thank you.

  07 Feb 2010; Raúl Porcel <armin76@gentoo.org> audacious-2.2.ebuild:
  sparc stable wrt #295051

  22 Jan 2010; Brent Baude <ranger@gentoo.org> audacious-2.2.ebuild:
  Marking audacious-2.2 ppc for bug 295051

  20 Jan 2010; Brent Baude <ranger@gentoo.org> audacious-2.2.ebuild:
  Marking audacious-2.2 ppc64 for bug 295051

*audacious-2.3_alpha1 (19 Jan 2010)

  19 Jan 2010; <chainsaw@gentoo.org> +audacious-2.3_alpha1.ebuild:
  First alpha of the 2.3 release. Bugs go upstream at
  http://jira.atheme.org, this is masked for your protection.

  16 Jan 2010; Tobias Klausmann <klausman@gentoo.org> audacious-2.2.ebuild:
  Stable on alpha, bug #295051

  07 Jan 2010; Christian Faulhammer <fauli@gentoo.org> audacious-2.2.ebuild:
  Transfer Prefix keywords

  23 Dec 2009; Jeroen Roovers <jer@gentoo.org> audacious-2.2.ebuild:
  Marked ~hppa (bug #294508).

  17 Dec 2009; Christian Faulhammer <fauli@gentoo.org> audacious-2.2.ebuild:
  stable x86, bug 295051

  16 Dec 2009; <chainsaw@gentoo.org> -audacious-2.2_beta2.ebuild,
  audacious-2.2.ebuild: