@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/audacious
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/audacious/ChangeLog,v 1.198 2010/03/01 19:57:36 chainsaw Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/audacious/ChangeLog,v 1.199 2010/03/19 14:35:31 chainsaw Exp $
+
+*audacious-2.3_beta2 (19 Mar 2010)
+
+  19 Mar 2010; <chainsaw@gentoo.org> +audacious-2.3_beta2.ebuild:
+  New beta release with many bugfixes. Bugs still go upstream.
 
   01 Mar 2010; <chainsaw@gentoo.org> -audacious-2.1.ebuild,
   -audacious-2.3_alpha1.ebuild, -audacious-2.3_alpha2.ebuild:
